# FORMICA

./: .gitignore  README.md
trunk/: CMakeLists.txt
trunk/src/: AbstractNode.cpp  AbstractNode.h  CMakeLists.txt  ConstantNode.cpp  ConstantNode.h  Context.h  ExecutionTree.cpp  ExecutionTree.h  FormicaLexer.cpp  FormicaLexer.h  Function.cpp  Function.h  OperatorNode.cpp  OperatorNode.h  VariableNode.cpp  VariableNode.h
trunk/unit_tests/: AbstractNodeTest.cpp  CMakeLists.txt  ConstantNodeTest.cpp  ExecutionTreeTest.cpp  FormicaLexerTest.cpp  FunctionTest.cpp  OperatorNodeTest.cpp  UnitTestMain.cpp  VariableNodeTest.cpp
